fixed delete answer button spacing

--- a/frontend/src/components/AllAnswers/AllAnswers.css
+++ b/frontend/src/components/AllAnswers/AllAnswers.css
@@ -26,6 +26,5 @@
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
-    padding-bottom: 50px;
     background-color: #FEF5ED;
 }
